# breast-cancer-prediction

./: .python-version  Dockerfile  LICENSE  README.md  fly.toml  prediccion-example-remote.http  prediccion-example.http  pyproject.toml
.github/workflows/: fly-deploy.yml  test.yml
api/: app.py
model/: breast_cancer.pkl
notebooks/: predicting-breast-cancer-logistic-regression.ipynb
tests/: test_sample.py
